docs/dev/v5/learn/administration.md
---
sidebar_position: 3
---
# Administration

The protocol has very minimal global governance - ensuring that each project owns and is responsible for its own funds and destiny. The following are the only global functions that can be accessed by a privileged administrating address, initially the [JuiceboxDAO multisig](https://gnosis-safe.io/app/eth:0xAF28bcB48C40dBC86f52D459A6562F658fc94B1e/home), a 9 of 14 multisig voted in by JBX members:

* **[`JBProjects.setTokenUriResolver(...)`](/docs/dev/v5/api/core/JBProjects.md#settokenuriresolver)**<br/>
  Allows the owner of the [`JBProjects`](/docs/dev/v5/api/core/JBProjects.md) contract to provide and change the [`IJBTokenUriResolver`](/docs/dev/v5/api/core/interfaces/IJBTokenUriResolver.md) used to resolve metadata for project NFTs in its [`tokenURI(...)`](/docs/dev/v5/api/core/JBProjects.md#tokenuri) function.
  <br/>
* **[`JBPrices.addPriceFeedFor(...)`](/docs/dev/v5/api/core/JBPrices.md#addpricefeedfor)**<br/>
  Allows the owner of the [`JBPrices`](/docs/dev/v5/api/core/JBPrices.md) contract to add new price feeds used to convert amounts denoted in one currency to another. Once added, a default price feed cannot be removed. A project owner can set and use custom price feeds, but cannot override default price feeds.
  <br/>
* **[`JBDirectory.setIsAllowedToSetFirstController(...)`](/docs/dev/v5/api/core/JBDirectory.md#setisallowedtosetfirstcontroller)**<br/>
  Allows the owner of the [`JBDirectory`](/docs/dev/v5/api/core/JBDirectory.md) contract to add/remove addresses that can set a project's first controller on its behalf. Allowed contracts simplify project deployments by removing the need for the project's owner to send a second transaction to set the controller in the directory.
  <br/>
* **[`JBFeelessAddresses.setFeelessAddress(...)`](/docs/dev/v5/api/core/JBFeelessAddresses.md#setfeelessaddress)**<br/>
  Allows the owner of the [`JBFeelessAddresses`](/docs/dev/v5/api/core/JBFeelessAddresses.md) contract to add/remove addresses that can receive funds from projects without incurring fees typically taken any time funds leave the ecosystem. 
* **[`JBBuybackHookRegistry.allowHook(...)`](/docs/dev/v5/api/buyback-hook/JBBuybackHookRegistry.md#allowhook) && [`JBBuybackHookRegistry.disallowHook(...)`](/docs/dev/v5/api/buyback-hook/JBBuybackHookRegistry.md#disallowhook)**<br/>
  Allows the owner of the [`JBBuybackHookRegistry`](/docs/dev/v5/api/buyback-hook/JBBuybackHookRegistry.md) contract to add/remove addresses that serve as the buyback hook. Projects using the registry as the buyback hook can either inherit changes made by this owner, or set their own hook among those allowed by the owner.
* **[`JBSwapTerminalRegistry.allowTerminal(...)`](/docs/dev/v5/api/swap-terminal/JBSwapTerminalRegistry.md#allowterminal) && [`JBSwapTermianlRegistry.disallowTerminal(...)`](/docs/dev/v5/api/swap-terminal/JBSwapTerminalRegistry.md#disallowterminal)**<br/>
  Allows the owner of the [`JBSwapTerminalRegistry`](/docs/dev/v5/api/swap-terminal/JBSwapTerminalRegistry.md) contract to add/remove addresses that serve as the swap terminal. Projects using the registry as a terminal can either inherit changes made by this owner, or set their own swap terminal among those allowed by the owner.
* **[`JBSuckersRegistry.allowSuckerDeployer(...)`](/docs/dev/v5/api/suckers/JBSuckerRegistry.md#allowsuckerdeployer) && [`JBSuckersRegistry.allowSuckerDeployer(...)`](/docs/dev/v5/api/suckers/JBSuckerRegistry.md#allowsuckerdeployers) && [`JBSuckersRegistry.removedSuckerDeployer(...)`](/docs/dev/v5/api/suckers/JBSuckerRegistry.md#removesuckerdeployer)**<br/>
  Allows the owner of the [`JBSuckersRegistry`](/docs/dev/v5/api/suckers/JBSuckerRegistry.md) contract to add/remove addresses that can deploy new suckers. The owner must approve of infrastructure that extends existing projects to new chains.

Ownership for each contract is managed independently and can be transferred to a new owner by the current owner.
